# ref-impl-split-evaluator-xgb

./: CMakeLists.txt  README.md  evaluator.cc  evaluator.h  helpers.h  iterator.h  reduce.h
include/: evaluator.h  helpers.h  iterator.h  param.h  reduce.h  scan.h
src/: evaluator.cc  main.cc
test/: test_evaluate_splits.cc  test_iterator.cc  test_main.cc  test_reduce.cc  test_scan.cc
